8311599: GenShen: Missing card mark barrier when processing references

Reviewed-by: ysr